--- a/index.html
+++ b/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cinder Test</title>
-    <link rel="stylesheet" href="static/index.css">
-    <script type="module" src="src/js/index" defer></script>
+    <title>Cinder App</title>
 </head>
 <body>
-    <div class="page">
-
-    </div>
+    <div class="root"></div>
 </body>
 </html>
